UI: Fix wrapping of long comment
Fixes #5862

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -1722,6 +1722,8 @@ a.language:hover {
 .source-comment {
   font-weight: normal;
   vertical-align: top;
+  white-space: normal;
+  font-size: 12px;
 }
 .unit-state-cell {
   width: 6px;
